fixed navbar collapse button not working in the dashboard and fixed shapes z-index also disabled pointer-events for it **

--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -92,11 +92,12 @@
 }
 
 .shapes {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100%;
   width: 100%;
+  pointer-events: none;
 }
 
 .shape {
